--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/stellar-sdk": "^0.8.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "stellar-sdk": "^0.8.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
