--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@types/stellar-sdk": "^0.8.3",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "moment": "^2.22.2",
     "rxjs": "^6.0.0",
     "stellar-sdk": "^0.8.2",
     "zone.js": "^0.8.26"
